// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/modalLoading should renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      [
        {
          "justifyContent": "flex-end",
        },
        {
          "justifyContent": "center",
        },
      ],
    ]
  }
  testID="Pressable"
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 12,
          "justifyContent": "center",
          "marginVertical": 20,
          "paddingHorizontal": 20,
          "paddingVertical": 24,
          "width": 734,
        },
        {
          "maxWidth": "80%",
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "alignSelf": "center",
          "transform": [
            {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <SvgMock
        fill="#2B78EE"
        height="48"
        style={
          {
            "margin": 6,
          }
        }
        width="48"
      />
    </View>
    <View
      style={
        {
          "marginBottom": 8,
          "marginTop": 12,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#20242D",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 18,
              "lineHeight": 22,
              "minHeight": 22,
            },
            [
              {
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        title
      </Text>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#5E6678",
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
              "minHeight": 16,
            },
            [
              {
                "paddingTop": 8,
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        descriptionText
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "marginTop": 20,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#F2F4F7",
            "borderRadius": 12,
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "#2B78EE",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 18,
                "lineHeight": 22,
                "minHeight": 22,
              },
              [
                {
                  "paddingHorizontal": 6,
                },
                undefined,
              ],
            ]
          }
        >
          Отмена
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/modalLoading should renders correctly with optional 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      [
        {
          "justifyContent": "flex-end",
        },
        {
          "justifyContent": "center",
        },
      ],
    ]
  }
  testID="Pressable"
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 12,
          "justifyContent": "center",
          "marginVertical": 20,
          "paddingHorizontal": 20,
          "paddingVertical": 24,
          "width": 734,
        },
        {
          "maxWidth": "80%",
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "alignSelf": "center",
          "transform": [
            {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <SvgMock
        fill="#2B78EE"
        height="48"
        style={
          {
            "margin": 6,
          }
        }
        width="48"
      />
    </View>
    <View
      style={
        {
          "marginBottom": 8,
          "marginTop": 12,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#20242D",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 18,
              "lineHeight": 22,
              "minHeight": 22,
            },
            [
              {
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        title
      </Text>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#5E6678",
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
              "minHeight": 16,
            },
            [
              {
                "paddingTop": 8,
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        descriptionText
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "marginTop": 20,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#F2F4F7",
            "borderRadius": 12,
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "#2B78EE",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 18,
                "lineHeight": 22,
                "minHeight": 22,
              },
              [
                {
                  "paddingHorizontal": 6,
                },
                undefined,
              ],
            ]
          }
        >
          buttonText
        </Text>
      </View>
    </View>
  </View>
</View>
`;
